the numbers work

--- a/AndroidProject/app/src/main/res/layout/activity_main.xml
+++ b/AndroidProject/app/src/main/res/layout/activity_main.xml
@@ -114,6 +114,7 @@
         android:id="@+id/N5"
         android:layout_width="40dp"
         android:layout_height="43dp"
+
         android:text="5"
         android:textAlignment="center"
         android:textSize="34sp"
@@ -128,6 +129,7 @@
         android:id="@+id/N4"
         android:layout_width="40dp"
         android:layout_height="43dp"
+
         android:text="4"
         android:textAlignment="center"
         android:textSize="34sp"
@@ -143,6 +145,7 @@
         android:layout_width="40dp"
         android:layout_height="43dp"
         android:text="3"
+
         android:textAlignment="center"
         android:textSize="34sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -158,6 +161,7 @@
         android:layout_height="wrap_content"
         android:backgroundTint="#D3D3D3"
         android:text="0"
+        android:onClick="clickNumber"
         android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -172,6 +176,7 @@
         android:layout_height="wrap_content"
         android:backgroundTint="#D3D3D3"
         android:text="9"
+        android:onClick="clickNumber"
         android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -186,6 +191,7 @@
         android:layout_height="wrap_content"
         android:backgroundTint="#D3D3D3"
         android:text="3"
+        android:onClick="clickNumber"
         android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -200,6 +206,7 @@
         android:layout_height="wrap_content"
         android:backgroundTint="#D3D3D3"
         android:text="2"
+        android:onClick="clickNumber"
         android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -214,6 +221,7 @@
         android:layout_height="wrap_content"
         android:backgroundTint="#D3D3D3"
         android:text="1"
+        android:onClick="clickNumber"
         android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -228,6 +236,7 @@
         android:layout_height="wrap_content"
         android:backgroundTint="#D3D3D3"
         android:text="4"
+        android:onClick="clickNumber"
         android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -242,6 +251,7 @@
         android:layout_height="wrap_content"
         android:backgroundTint="#D3D3D3"
         android:text="7"
+        android:onClick="clickNumber"
         android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -256,6 +266,7 @@
         android:layout_height="wrap_content"
         android:backgroundTint="#D3D3D3"
         android:text="6"
+        android:onClick="clickNumber"
         android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -270,6 +281,7 @@
         android:layout_height="wrap_content"
         android:backgroundTint="#D3D3D3"
         android:text="8"
+        android:onClick="clickNumber"
         android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -284,6 +296,7 @@
         android:layout_height="wrap_content"
         android:backgroundTint="#D3D3D3"
         android:text="5"
+        android:onClick="clickNumber"
         android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -362,7 +375,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.04" />
 
-    <TextView
+    <EditText
         android:id="@+id/vz"
         android:layout_width="457dp"
         android:layout_height="84dp"
