--- a/AndroidProject/app/src/main/res/layout/activity_main.xml
+++ b/AndroidProject/app/src/main/res/layout/activity_main.xml
@@ -375,28 +375,16 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.04" />
 
-    <EditText
-        android:id="@+id/vz"
-        android:layout_width="457dp"
-        android:layout_height="84dp"
-        android:textAlignment="center"
-        android:text="Enter the value of 4 digits"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.625" />
 
-    <TextView
-        android:id="@+id/try1"
+    <EditText
+        android:id="@+id/vz1"
         android:layout_width="187dp"
         android:layout_height="43dp"
         android:text="TextView"
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.149"
+        app:layout_constraintHorizontal_bias="0.071"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.155" />
