--- a/AndroidProject/app/src/main/res/layout/activity_main.xml
+++ b/AndroidProject/app/src/main/res/layout/activity_main.xml
@@ -76,7 +76,7 @@
         android:layout_width="187dp"
         android:layout_height="43dp"
         android:textAlignment="center"
-        android:text="try5"
+        android:text="Attempt 5"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.148"
@@ -89,7 +89,7 @@
         android:layout_width="187dp"
         android:layout_height="43dp"
         android:textAlignment="center"
-        android:text="Try4"
+        android:text="Attempt 4"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.148"
@@ -102,7 +102,7 @@
         android:layout_width="187dp"
         android:layout_height="43dp"
         android:textAlignment="center"
-        android:text="Try3"
+        android:text="Attempt 3"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.148"
@@ -380,7 +380,7 @@
         android:id="@+id/try1"
         android:layout_width="187dp"
         android:layout_height="43dp"
-        android:text="TextView"
+        android:text="Attempt 1"
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -394,7 +394,7 @@
         android:layout_width="187dp"
         android:layout_height="43dp"
         android:textAlignment="center"
-        android:text="TextView"
+        android:text="Attempt 2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.148"
