--- a/AndroidProject/app/src/main/res/layout/activity_main.xml
+++ b/AndroidProject/app/src/main/res/layout/activity_main.xml
@@ -379,8 +379,8 @@
         android:id="@+id/vz"
         android:layout_width="457dp"
         android:layout_height="84dp"
+        android:text="Result"
         android:textAlignment="center"
-        android:text="Enter the value of 4 digits"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
